<resources>
    <string name="app_name">fidle clone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_policy">By signing up you agree to our Terms and Policy?</string>
    <string name="signup">signUp</string>
    <string name="todo">TODO</string>
    <string name="login_to_start_earning">Login To Start Earning</string>
    <string name="username">UserName</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">login</string>
    <string name="Password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>